5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1662_2973.log
== TEST (2019-04-15 14:14:50) 
-- CODE:
s0 = int(input("posicao inicial: "))
v = int(input("velocidade: "))
t = int(input("tempo: "))
sf = s0 + v*t

if (sf <= 100):
	msg = "OK"
	
else:
	msg = "ACIMA"
	
print(msg)
-- OUTPUT:
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:15:34) 
-- CODE:
s0 = int(input("posicao inicial: "))
v = int(input("velocidade: "))
t = int(input("tempo: "))
sf = s0 + v*t

if (sf <= 100):
	msg = "OK"
	
else:
	msg = "ACIMA"
print(sf)	
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:15:38) 
-- CODE:
s0 = int(input("posicao inicial: "))
v = int(input("velocidade: "))
t = int(input("tempo: "))
sf = s0 + v*t

if (sf <= 100):
	msg = "OK"
	
else:
	msg = "ACIMA"
print(sf)	
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:15:50) 
-- CODE:
s0 = int(input("posicao inicial: "))
v = int(input("velocidade: "))
t = int(input("tempo: "))
sf = s0 + v*t

if (sf <= 100):
	msg = "OK"
	
else:
	msg = "ACIMA"
print(sf)	
print(msg)
-- EXECUTION TIME:
0.192809
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:16:11) 
-- CODE:
s0 = int(input("posicao inicial: "))
v = int(input("velocidade: "))
t = int(input("tempo: "))
sf = s0 + v*t

if (sf <= 100):
	msg = "OK"
	
else:
	msg = "ACIMA"
print(int(sf))	
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:16:23) 
-- CODE:
s0 = int(input("posicao inicial: "))
v = int(input("velocidade: "))
t = int(input("tempo: "))
sf = s0 + v*t

if (sf <= 100):
	msg = "OK"
	
else:
	msg = "ACIMA"
print(int(sf))	
print(msg)
-- EXECUTION TIME:
0.170069
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:16:53) 
-- CODE:
s0 = int(input("posicao inicial: "))
v = int(input("velocidade: "))
t = int(input("tempo: "))
sf = s0 + v*t

if (sf <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(sf))	
print(msg)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:17:04) 
-- CODE:
s0 = int(input("posicao inicial: "))
v = int(input("velocidade: "))
t = int(input("tempo: "))
sf = s0 + v*t

if (sf <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(sf))	
print(msg)
-- EXECUTION TIME:
0.109649
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:18:02) 
-- CODE:
s0 = int(input("posicao inicial: "))
v = int(input("velocidade: "))
t = int(input("tempo: "))
sf = s0 + v*t

if (sf <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(sf))	
print(msg.upper())
-- EXECUTION TIME:
0.134512
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:18:55) 
-- CODE:
s0 = int(input("posicao inicial: "))
v = int(input("velocidade: "))
t = int(input("tempo: "))
sf = s0 + v * t

if (sf <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(sf))	
print(msg.upper())
-- EXECUTION TIME:
0.203966
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:19:24) 
-- CODE:
s0 = int(input("posicao inicial: "))
v = int(input("velocidade: "))
t = int(input("tempo: "))
S = s0+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:19:40) 
-- CODE:
s0 = int(input("posicao inicial: "))
v = int(input("velocidade: "))
t = int(input("tempo: "))
S = s0+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- EXECUTION TIME:
0.224865
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:20:27) 
-- CODE:
s = int(input("posicao inicial: "))
v = int(input("velocidade: "))
t = int(input("tempo: "))
S = s+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:20:41) 
-- CODE:
s = int(input("posicao inicial: "))
v = int(input("velocidade: "))
t = int(input("tempo: "))
S = s+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- EXECUTION TIME:
0.153279
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:26:27) 
-- CODE:
s = int(input("posicao inicial: m"))
v = int(input("velocidade: "))
t = int(input("tempo: "))
S = s+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:26:35) 
-- CODE:
s = int(input("posicao inicial: ")m)
v = int(input("velocidade: "))
t = int(input("tempo: "))
S = s+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- ERROR:
File "XXXX", line 1
    s = int(input()m)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:26:41) 
-- CODE:
s = int(input("posicao inicial: "m))
v = int(input("velocidade: "))
t = int(input("tempo: "))
S = s+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- ERROR:
File "XXXX", line 1
    s = int(input("posicao inicial: "m))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:26:52) 
-- CODE:
s = int(input("posicao inicial:  m"))
v = int(input("velocidade: "))
t = int(input("tempo: "))
S = s+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:27:15) 
-- CODE:
s = int(input("posicao inicial: ""m"))
v = int(input("velocidade: "))
t = int(input("tempo: "))
S = s+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- OUTPUT:
posicao inicial: m7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:27:32) 
-- CODE:
s = int(input("posicao inicial: (m)"))
v = int(input("velocidade: "))
t = int(input("tempo: "))
S = s+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:27:44) 
-- CODE:
s = int(input("posicao inicial(m):"))
v = int(input("velocidade: "))
t = int(input("tempo: "))
S = s+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:28:10) 
-- CODE:
s = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo: "))
S = s+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:28:38) 
-- CODE:
s = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = s+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:28:54) 
-- CODE:
s = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = s+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- EXECUTION TIME:
0.159474
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:29:43) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:29:56) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'
print(int(S))	
print(msg.upper())
-- EXECUTION TIME:
0.213236
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:30:05) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'

print(int(S))	
print(msg.upper())
-- EXECUTION TIME:
0.199343
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:30:08) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'

print(int(S))	
print(msg.upper())
-- EXECUTION TIME:
0.272055
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
7202
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:30:09) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'

print(int(S))	
print(msg.upper())
-- EXECUTION TIME:
0.122887
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
7202
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7202
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:30:09) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'

print(int(S))	
print(msg.upper())
-- EXECUTION TIME:
0.323122
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7203
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:

-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:30:09) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0+v*t

if (S <= 100):
	msg = 'OK'
	
else:
	msg = 'ACIMA'

print(int(S))	
print(msg.upper())
-- EXECUTION TIME:
0.168942
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
7203
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:30:52) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0 + v * t

if (S <= 100):
	msg = 'ok'
	
else:
	msg = 'acima'

print(int(S))	
print(msg.upper())
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:31:02) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0 + v * t

if (S <= 100):
	msg = 'ok'
	
else:
	msg = 'acima'

print(int(S))	
print(msg.upper())
-- EXECUTION TIME:
0.190783
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:32:18) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0 + v * t

if (S <= 100m/s):
	msg = 'ok'
	
else:
	msg = 'acima'

print(int(S))	
print(msg.upper())
-- ERROR:
File "XXXX", line 6
    if (S <= 100m/s):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:32:47) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0 + v * t

if (S <= 100):
	msg = 'ok'
	
else:
	msg = 'acima'

print(int(S))	
print(msg.upper())
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:33:19) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0 + v * t

if (S <= 100):
	msg = 'ok'
	
else:
	msg = 'acima'

print(int(S))	
print(msg.upper())
-- EXECUTION TIME:
0.1431
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:33:22) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0 + v * t

if (S <= 100):
	msg = 'ok'
	
else:
	msg = 'acima'

print(int(S))	
print(msg.upper())
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:35:52) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = posicao final
-- ERROR:
File "XXXX", line 4
    S = posicao final
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:36:37) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0 +_ vt
-- ERROR:
File "XXXX", line 4
    S = S0 +_ vt
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:36:45) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0 + vt
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    S = S0 + vt
NameError: name 'vt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:39:51) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
print(int(S = S0 + (v*t))

if (S <= 100):
	msg = "ok"
	
else:
	msg = "acima"
	

-- ERROR:
File "XXXX", line 6
    if (S <= 100):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:40:42) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0 + (v*t)

if (S <= 100):
	msg = "ok"
	
else:
	msg = "acima"
	
print(S)
print(msg.upper())
	

-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:40:51) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0 + (v*t)

if (S <= 100):
	msg = "ok"
	
else:
	msg = "acima"
	
print(S)
print(msg.upper())
	

-- EXECUTION TIME:
0.284482
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:44:57) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0 + (v*t)

if (S <= (ms/)100):
	msg = "ok"
	
else:
	msg = "acima"
	
print(S)
print(msg.upper())
	

-- ERROR:
File "XXXX", line 6
    if (S <= (ms/)100):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:45:51) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0 + (v*t)

if (v <= 100):
	msg = "ok"
	
else:
	msg = "acima"
	
print(S)
print(msg.upper())
	

-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:46:02) 
-- CODE:
S0 = int(input("posicao inicial(m):"))
v = int(input("velocidade(m/s): "))
t = int(input("tempo(s): "))
S = S0 + (v*t)

if (v <= 100):
	msg = "ok"
	
else:
	msg = "acima"
	
print(S)
print(msg.upper())
	

-- EXECUTION TIME:
0.12832
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
